// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRenameFolderForm Snapshots {name: "common"} 1`] = `
<div
  className="w-100 d-flex align-items-center"
>
  <input
    className="form-control form-control-narrow filler mr-2"
    onChange={[Function]}
    type="text"
    value="common"
  />
  <button
    className="btn btn-success btn-circle mr-1"
    disabled={false}
    onClick={[Function]}
  >
    <i
      className="fa fa-chevron-circle-down"
    />
  </button>
  <button
    className="btn btn-warning btn-circle"
    onClick={[Function]}
  >
    <i
      className="fa fa-times"
    />
  </button>
</div>
`;

exports[`AddRenameFolderForm Snapshots {name: undefined} 1`] = `
<div
  className="w-100 d-flex align-items-center"
>
  <input
    className="form-control form-control-narrow filler mr-2"
    onChange={[Function]}
    type="text"
    value=""
  />
  <button
    className="btn btn-success btn-circle mr-1"
    disabled={true}
    onClick={[Function]}
  >
    <i
      className="fa fa-chevron-circle-down"
    />
  </button>
  <button
    className="btn btn-warning btn-circle"
    onClick={[Function]}
  >
    <i
      className="fa fa-times"
    />
  </button>
</div>
`;

exports[`AddRenameFolderForm Snapshots after some text inputed 1`] = `
<div
  className="w-100 d-flex align-items-center"
>
  <input
    className="form-control form-control-narrow filler mr-2"
    onChange={[Function]}
    type="text"
    value="some"
  />
  <button
    className="btn btn-success btn-circle mr-1"
    disabled={false}
    onClick={[Function]}
  >
    <i
      className="fa fa-chevron-circle-down"
    />
  </button>
  <button
    className="btn btn-warning btn-circle"
    onClick={[Function]}
  >
    <i
      className="fa fa-times"
    />
  </button>
</div>
`;
